tests/vertical-slice/reject/gen_fn_forwarded_fn_call_result.hew
// Reject (CAP-11): a fn-valued call result can hide a capturing closure
// environment before the value reaches a generator constructor.
gen fn mapped(n: i64, f: fn(i64) -> i64) -> i64 {
    var i = 0;
    while i < n {
        yield f(i);
        i = i + 1;
    }
}

fn identity(f: fn(i64) -> i64) -> fn(i64) -> i64 {
    f
}

fn main() {
    let suffix = "owned-" + "heap";
    for v in mapped(1, identity(|x: i64| x + suffix.len())) {
        println(v);
    }
}
